--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spotify-music-app",
+  "name": "movie-explorer-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://bodlasahith.github.io/mp2",
